[project]
name = "admiral_denver"
version = "0.0.1"
authors = [
    { name = "Joe Collins", email = "joejcollins@gmail.com" },
    { name = "Mags Cousins", email = "magscousins@hotmail.com" },
]
description = "Spains Hall Python analysis."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "black",
    "debugpy",         # only required for debugging, not needed for production.
    "imageio",
    "ipykernel",       # required for jupyter notebook in VS Code.
    "ipympl",
    "jupyterlab",
    "loguru",
    "lxml",            # for parsing GPX files.
    "matplotlib",
    "mkdocs-material", # theme for the documentation.
    "mkdocs",
    "mypy",
    "OSGridConverter",
    "pandas",
    "pre-commit",
    "pydantic",
    "pytest-cov",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-image",
    "sourcery",
    "sqlite-web",
    "tqdm",
    "types-tqdm",
]

[project.urls]
"homepage" = "https://github.com/joejcollins/admiral-denver"
"repository" = "https://github.com/joejcollins/admiral-denver"
"documentation" = "https://github.com/joejcollins/admiral-denver"

[project.scripts]
run = "admiral_denver.main:main"

[tool.pytest.ini_options]
log_cli = false
addopts = ["-q", "--disable-warnings", "--cache-clear"]
testpaths = ["./tests"]

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.13"
pythonPlatform = "Linux"

[tool.ruff]
lint.select = ["F", "E", "W", "C90", "I"]
lint.fixable = ["ALL"]
target-version = "py310"
exclude = [
    ".git",
    ".github",
    ".pytest_cache",
    ".venv",
    ".vscode",
    "__pycache__",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
follow_imports = "skip"
ignore_missing_imports = true
